--- a/mostrar_profes.html
+++ b/mostrar_profes.html
@@ -15,8 +15,15 @@
                 <li><a href="#">Iniciar Sesión</a></li>
             </ul>
         </nav>
-        <h1>Ver Clases de Profesores</h1>
-        <p>Seleccioná un profesor para ver sus clases.</p>
+        <h1>Clases</h1>
+        <p>Selecciona la clase que desees, y contacta al profesor directamente.</p>
     </header>
+    <section>
+        <form action="">
+            <label for="search">Materia:</label>
+            <input required type="text" id="search" name="search" placeholder="Ej: Física">
+            <button type="submit">Buscar</button>
+        </form>
+    </section>
 </body>
 </html>
