--- a/clases.html
+++ b/clases.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Busca Tu Profe</title>
+    <title>Ver Clases</title>
 </head>
 <body>
     <header>
@@ -17,22 +17,8 @@
         </nav>
     </header>
     <section>
-        <h3>Si sos profe, registrate para ofrecer tus clases</h3>
-        <a href="./registrarse">Registrarse</a>
-    </section>
-    <section>
-        <h1>Busca tu profe</h1>
-        <p>Conectá con tu profe ideal en segundos. Buscá clases y escribí directo por WhatsApp.</p>
-    </section>
-    <section>
-        <h2>¿Cómo funciona?</h2>
-        <ol>
-            <li>Buscá la clase que necesites.</li>
-            <li>Contacta a tu profe por WhatsApp.</li>
-            <li>¡Listo! Comenzá a aprender.</li>
-        </ol>
-    </section>
-    <section>
+        <h1>Clases</h1>
+        <p>Selecciona la clase que desees, y contacta al profesor directamente.</p>
         <form action="">
             <fieldset>
                 <legend>Buscar clase</legend>
@@ -68,7 +54,21 @@
             </fieldset>
         </form>
     </section>
-    
-    
+    <section>
+        <h3>Resultados de la busqueda:</h3>
+        <ul>
+            <li>
+                <h4>Física - Presencial</h4>
+                <p>Profesor: Juan Pérez</p>
+                <p>Provincia: Mendoza</p>
+                <a href="https://wa.me/5492612345678" target="_blank">Contactar por WhatsApp</a>
+            </li>
+            <li>
+                <h4>Matemáticas - Virtual</h4>
+                <p>Profesora: Ana Gómez</p>
+                <p>Provincia: Mendoza</p>
+                <a href="https://wa.me/5492612345678" target="_blank">Contactar por WhatsApp</a>
+            </li>
+    </section>
 </body>
 </html>
