--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Busca Tu Profe</title>
+    <link rel="stylesheet" href="./css/style.css"/>
 </head>
 <body>
     <header>
@@ -19,6 +20,7 @@
     <section>
         <h3>Si sos profe, registrate para ofrecer tus clases</h3>
         <a href="./registrarse">Registrarse</a>
+        <hr>
     </section>
     <section>
         <h1>Busca tu profe</h1>
@@ -34,7 +36,7 @@
     </section>
     <section>
         <form action="">
-            <fieldset>
+            <fieldset id="fieldset">
                 <legend>Buscar clase</legend>
                 <label for="materia">Materia:</label>
                 <input required type="text" id="materia" name="materia" placeholder="Ej: Física" size="30">
