--- a/profes.html
+++ b/profes.html
@@ -13,15 +13,13 @@
             <ul>
                 <li class="nav"><a href="./index.html">Inicio</a></li>
                 <li class="nav"><a href="./clases.html">Clases</a></li>
-                <li class="nav"><a href="./profes.html">Soy profe</a></li>
+                <li class="nav"><a href="#" id="soy-profe-link">Soy profe</a></li>
             </ul>
         </nav>
     </header>
 
     <section class="professor-panel">
         <div class="panel-header">
-            <h1 style="color: white">Mis Clases</h1>
-            <h2>Prof. Ignacio W.</h2>
         </div>
 
         <div class="panel-content">
@@ -93,5 +91,7 @@
     </div>
 
     <script src="./scripts/scriptProfes.js"></script>
+    <script src="scripts/scriptNav.js"></script>
+
 </body>
 </html>
