--- a/clases.html
+++ b/clases.html
@@ -13,7 +13,7 @@
             <ul>
                 <li class="nav"><a href="./index.html">Inicio</a></li>
                 <li class="nav"><a href="./clases.html">Clases</a></li>
-                <li class="nav"><a href="./profes.html">Soy profe</a></li>
+                <li class="nav"><a href="#" id="soy-profe-link">Soy profe</a></li>
             </ul>
         </nav>
     </header>
@@ -63,3 +63,5 @@
 </body>
 </html>
 <script src="./scripts/scriptClases.js"></script>
+<script src="scripts/scriptNav.js"></script>
+
