correcion carga de clases

--- a/register.html
+++ b/register.html
@@ -31,7 +31,7 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="firstName">
-                                    <i class="fas fa-user"></i> Nombre y Apellido
+                                    <i class="fas fa-user"></i> Nombre (Se mostrará así en la clase)
                                 </label>
                                 <input type="text" id="firstName" name="firstName" placeholder="Ej. Homero Simpson" required>
                             </div>
