--- a/profes.html
+++ b/profes.html
@@ -14,15 +14,18 @@
                 <li class="nav"><a href="./index.html">Inicio</a></li>
                 <li class="nav"><a href="./clases.html">Clases</a></li>
                 <li class="nav"><a href="#" id="soy-profe-link">Soy profe</a></li>
+                
             </ul>
         </nav>
     </header>
 
     <section class="professor-panel">
         <div class="panel-header">
+            <button id="logout-btn">Cerrar sesion</button>
         </div>
 
         <div class="panel-content">
+            
             <div class="classes-section">
                 <div class="section-header">
                     <h3>Clases Registradas</h3>
